REFACT 整理了一下主要代码,使其易于阅读

--- a/app/views/topics/_post.html.erb
+++ b/app/views/topics/_post.html.erb
@@ -7,7 +7,6 @@
       </a>
     <% else %>
       <% media_path = post['media_url'].gsub('data/mock/', '/mock/') %>
-      <% # 动态生成封面路径：/mock/poster/video_name_poster.jpeg %>
       <% video_name = File.basename(media_path, File.extname(media_path)) %>
       <% poster_path = "/mock/poster/#{video_name}_poster.jpeg" %>
       <a href="<%= media_path %>" class="glightbox" data-gallery="gallery1" data-type="video" data-description="<%= post['caption'] %>">
@@ -53,24 +52,24 @@
 
     .post-media {
       width: 100%;
-      aspect-ratio: 1; /* 保持 1:1 的宽高比 */
+      aspect-ratio: 1;
       overflow: hidden;
-      position: relative; /* 建议添加，以便后续可能需要绝对定位内部元素 */
-      background-color: #eee; /* 添加一个背景色，便于调试查看容器范围 */
+      position: relative;
+      background-color: #eee;
     }
 
-    .post-media .plyr { /* 选择 .post-media 下的 Plyr 容器 */
+    .post-media .plyr {
       width: 100%;
       height: 100%;
-      position: absolute; /* 让它相对于 .post-media 定位 */
+      position: absolute;
       top: 0;
       left: 0;
     }
 
     .post-media .plyr video {
       object-fit: cover;
-      width: 100%;  /* Plyr 通常会处理这个，但显式设置可能更保险 */
-      height: 100%; /* Plyr 通常会处理这个，但显式设置可能更保险 */
+      width: 100%;
+      height: 100%;
     }
 
     .post-image, .post-video {
